--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,26 @@ h2{
   margin-bottom: 0;
 }
 
+/*navbar*/
 .navbar{
   display: flex;
   justify-content: space-around;
   background: #ef9d63;
- align-items: center;
+  padding: 20px;
+  align-items: center;
+}
+
+.nav-link {
+  color: #902828;
+  text-decoration: none;
+  font-size: 1.1rem;
+  letter-spacing: 0.1rem;
+  font-weight: bold;
+}
+
+.nav-link:hover{
+  /*color: blue;*/
+  text-decoration: underline;
 }
 
 .home-container{
@@ -65,14 +80,16 @@ h2{
 }
 
 .clothes-container{
+  width: 90%;
+  margin: 20px auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 380px));
   grid-gap: 20px;
-  margin: 20px;
+  justify-content: space-around;
 }
 
 .clothes{
-    border: 1px solid #e4350e;
+    border: 2px solid #cc6b56;
     border-radius: 15px;
     background: #cc6b56;
     color: white;
@@ -86,12 +103,24 @@ h2{
 .clothes img{
   width: 90%;
   margin: 0 auto;
-  max-height: 400px;
+  height: 400px;
+}
+
+
+.cloth-link{
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+@media(min-width: 525px){
+  .cloth-item{
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+        }
 }
 
 .cloth-item{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   width: 90%;
   max-width: 700px;
   margin: 10px auto;
@@ -110,18 +139,19 @@ h2{
 
 .add-to-cart-btn{
   height: 40px;
-  margin: 20px 0;
   border: 1px solid green;
   border-radius: 10px;
   padding: 10px;
   letter-spacing: 1px;
   background: green;
   color: white;
+  margin-bottom: 20px;
 }
 
 .add-to-cart-btn:hover{
   background: darkgreen;
   cursor: pointer;
+  letter-spacing: 0.1rem;
 }
 
 .clicked-item{
@@ -144,12 +174,12 @@ h2{
   border-radius: 10px;
   background: green;
   color: white;
-  letter-spacing: 1px;
 }
 
 .view-cart-btn:hover{
   background: darkgreen;
   cursor: pointer;
+  letter-spacing: 0.1rem;
 }
 
 .cancel-btn{
@@ -158,11 +188,13 @@ h2{
   background: #383333;
   border-radius: 10px;
   color: white;
+  margin-bottom: 10px;
 }
 
 .cancel-btn:hover{
   background: #1f1919;
   cursor: pointer;
+  letter-spacing: 0.1rem;
 }
 
 .cart-container{
@@ -177,16 +209,78 @@ h2{
   width: 90%;
   margin-left: 10px;
 }
+.cart-topic{
+  font-family: 'Dancing Script', cursive;
+}
 
+.empty-cart{
+  margin: 15px 0;
+}
 .cart-items{
+  margin: 5px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  border: 1px solid mistyrose;
+  border-radius: 10px;
+  background: mistyrose;
+}
+
+.cart-items-desc{
+  margin-top: 15px;
+}
+
+.cart-items p{
+  margin: 0.1rem;
+  font-weight: 600;
 }
 
 .quantity{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 0.6rem;
+}
+
+.inc-dec{
+  color: #bb523a;
+  cursor: pointer;
+}
+
+.total{
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.remove-from-cart{
+  padding: 5px;
+  margin-top: 0.8rem;
+  background: #c5618b;
+  border: 1px solid #c5618b;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.remove-from-cart:hover{
+  background: #d21161;
+  border: 1px solid #d21161;
+  letter-spacing: 0.1rem;
+}
+
+.checkout-btn{
+  padding: 8px;
+  border: 1px solid #28bf57;
+  border-radius: 5px;
+  background: #28bf57;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.checkout-btn:hover{
+  background: darkgreen;
+  border: 1px solid darkgreen;
+  letter-spacing: 0.1rem;
 }
 
 img{
